Fixed overflow issue.

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ ul {
 ul li {
     height: 70px;
     line-height: 70px;
+    overflow: hidden;
 }   
     
 .winner {
